Nav space on mobile css fixed

--- a/src/App.css
+++ b/src/App.css
@@ -145,6 +145,11 @@ nav a{
 }
 
 @media only screen and (max-width: 600px){
+  nav a{
+    font-size: 1rem;
+    text-align: center;
+  }
+
 	.jobCardHolder, .applicationHolder {
     grid-template-columns: .75fr;
     justify-content: center ;
